ready this task

--- a/helm-chart/todoapp/templates/deployment.yml
+++ b/helm-chart/todoapp/templates/deployment.yml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: todoapp
-  namespace: todoapp
+  name: {{ .Release.Name }}-{{ .Chart.Name }}
+  namespace: {{ .Values.common.namespace }}
 spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
+      maxSurge: {{ .Values.todoapp.rollingUpdate.maxSurge }}
+      maxUnavailable: {{ .Values.todoapp.rollingUpdate.maxUnavailable }}
   selector:
     matchLabels:
-      app: todoapp
+      app: {{ .Chart.Name }}
   template:
     metadata:
       labels:
-        app: todoapp
+        app: {{ .Chart.Name }}
     spec:
-      serviceAccountName: secrets-reader
+      serviceAccountName: {{ .Values.todoapp.serviceAccountName }}
       containers:
-      - name: todoapp
-        image: ikulyk404/todoapp:4.0.1
+      - name: {{ .Values.todoapp.image.name }}
+        image: {{ .Values.todoapp.image.repository}}:{{ .Values.todoapp.image.version }}
         volumeMounts:
         - name: data
           mountPath: /app/data
@@ -32,42 +32,24 @@ spec:
           readOnly: true
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "150m"
+            memory: {{ .Values.todoapp.resources.requests.memory }}
+            cpu: {{ .Values.todoapp.resources.requests.cpu }}
           limits:
-            memory: "256Mi"
-            cpu: "150m"
+            memory: {{ .Values.todoapp.resources.limits.memory }}
+            cpu: {{ .Values.todoapp.resources.limits.cpu }}
         env:
         - name: PYTHONUNBUFFERED
           valueFrom:
             configMapKeyRef:
-              name: app-config
+              name: {{ .Chart.Name }}-config
               key: PYTHONUNBUFFERED
-        - name: SECRET_KEY
+{{- range $key, $value := .Values.secrets.data }}
+        - name: {{ $key }}
           valueFrom:
             secretKeyRef:
-              name: app-secret
-              key: SECRET_KEY
-        - name: DB_NAME
-          valueFrom:
-            secretKeyRef:
-              name: app-secret
-              key: DB_NAME
-        - name: DB_USER
-          valueFrom:
-            secretKeyRef:
-              name: app-secret
-              key: DB_USER
-        - name: DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: app-secret
-              key: DB_PASSWORD
-        - name: DB_HOST
-          valueFrom:
-            secretKeyRef:
-              name: app-secret
-              key: DB_HOST
+              name: {{ $.Chart.Name }}-secret
+              key: {{ $key }}
+{{- end }}
         ports:
         - containerPort: 8080
         livenessProbe:
@@ -98,7 +80,9 @@ spec:
           - weight: 1
             preference:
               matchExpressions:
-              - key: app
+              - key: {{ .Values.todoapp.affinity.key}}
                 operator: In
                 values:
-                - kube2py
+                  {{- range .Values.todoapp.affinity.values }}
+                   - {{ . }}
+                  {{- end }}
