--- a/helm-chart/todoapp/templates/pv.yml
+++ b/helm-chart/todoapp/templates/pv.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-data
-  namespace: todoapp
+  name: {{ .Chart.Name }}-pv
+  namespace: {{ .Values.common.namespace }}
 spec:
   storageClassName: standard
   persistentVolumeReclaimPolicy: Delete
   accessModes:
     - ReadWriteMany
   capacity:
-    storage: 1Gi
+    storage: {{ .Values.todoapp.pv.capacity }}
   hostPath:
     path: /data/
