--- a/helm-chart/todoapp/templates/pvc.yml
+++ b/helm-chart/todoapp/templates/pvc.yml
@@ -4,9 +4,8 @@ metadata:
   name: {{ .Chart.Name }}-pvc
   namespace: {{ .Values.common.namespace }}
 spec:
-  volumeName: {{ .Chart.Name }}-pv
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: {{ .Values.todoapp.pvc.requests.storage }}
